Small changes: added languages.

--- a/CSH_modern_resume.tex
+++ b/CSH_modern_resume.tex
@@ -39,21 +39,21 @@
 \cventry{01/2015 - 05/2015}
 {MBA Exchange}
 {Duke University - The Fuqua School of Business}{Durham, NC}
-{}
+{Cum. GPA: \textit{4.00/4.00}}
 {Core courses: Business Intelligence, Corporate Restructuring, Decision Models, Behavioral Economics}  % arguments 3 to 6 can be left empty
 
 \cventry{10/2014 - 10/2015}
 {M.Sc. Int. Management}
 {London School of Economics}{London, UK}
-{GMAT: \textit{740 (top 3\% worldwide)}}
+{GMAT: \textit{740 (top 3\% worldwide)}, Cum. GPA: N/A}
 {Core courses: Corporate Finance, Evolutionary Psychology, Strategy for the Information Economy}  % arguments 3 to 6 can be left empty
 
 \cventry{10/2010 - 11/2013}
 {B.Sc. Industrial Engineering}
 {Karlsruhe Institute of Technology}{Karlsruhe, Germany}
-{Cum GPA: \textit{1.8/6.00 (1.0 = best)}}
-{Core courses: Operations Research, Applied Informatics, Java Network Programming, Math I-III, Statistics I-II \\
-Bachelor Thesis: Quantitativ model to select customers in B2B software markets, Grade: 1.0/6.00 (high distinction)
+{Cum. GPA: \textit{3.88/4.00}}
+{Core courses: Operations Research, Applied Informatics, Java Programming, B2B Marketing, Math I-III, Statistics I-II \\
+Bachelor Thesis: Quantitativ model to select customers in B2B software markets, Grade: 4.00/4.00 (high distinction)
 }  % arguments 3 to 6 can be left empty
 
 \section{Work}
@@ -150,8 +150,10 @@ Bachelor Thesis: Quantitativ model to select customers in B2B software markets, 
 %\end{itemize}
 
 \section{Skills}
-\cvlistdoubleitem{Databases: SQL, VBA}{Web: HTML, CSS3, Ruby/Rails}
-\cvlistdoubleitem{OOP: Java}{OS: Mac, Windows, Android}
+\cvlistdoubleitem{Java, SQL, VBA, OPL, Git}{German (Mothertongue), English (fluent), Spanish (fluent)}
+\cvlistdoubleitem{Frontend (HTML, CSS3), Backend (Ruby/Rails)}{French (conversational), Tagalog (conversational)}
+%\cvlistitem{Programming: Frontend (HTML, CSS3), Backend (Ruby/Rails), Java, SQL, VBA, OPL, Git}
+%\cvlistitem{Languages: German (Mothertongue), English (fluent), Spanish (fluent), French (conversational), Tagalog (conversational)}
 %\cvlistitem{\LaTeX}
 
 %\section{Familiar With}
