contact info section updated

--- a/CSH_modern_resume.tex
+++ b/CSH_modern_resume.tex
@@ -99,7 +99,7 @@ Bachelor Thesis: Quantitativ model to select customers in B2B software markets, 
 {
 \begin{itemize}
 \item Founded a startup to sell personalized advertisement signs in bike frames
-\item Quick break-even through acquirement of several paying B2B customers
+\item Achieved quick break-even through acquirement of several paying B2B customers
 \end{itemize}
 }  % arguments 3 to 6 can be left empty
 
