Contact details updated to Ldn

--- a/my_cv.cls
+++ b/my_cv.cls
@@ -23,8 +23,8 @@
 \name{Christian Santiago}{Haug}
 %\title{Resumé title}                               % optional, remove / comment the line if not wanted
 
-\address{4108 McQueen Drive}{Durham, North Carolina, 27705}{USA}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
-\phone[mobile]{+1~(984)~209~8836}                   % optional, remove / comment the line if not wanted
+\address{Bankside House, Room 573}{24 Sumner Street, London SE1 9JA}{United Kingdom} % optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
+\phone[mobile]{+44~7517~598269}                   % optional, remove / comment the line if not wanted
 \email{c.s.haug@lse.ac.uk}                               % optional, remove / comment the line if not wanted
 \homepage{christianhaug.com}                         % optional, remove / comment the line if not wanted
 %\social[github][github.com/chrizzzer]{chrizzzer}
