shortend exp. and added tech projects

--- a/CSH_modern_resume_biz.tex
+++ b/CSH_modern_resume_biz.tex
@@ -109,12 +109,13 @@ Bachelor Thesis: Quantitativ model to select customers in B2B software markets, 
 {}
 {
 \begin{itemize}
-\item Lead a case study on the introduction of a new vehicle to the Australian Market
-\item Created an implementation plan for a reorganization of the CV department
+\item Lead a project on the introduction of a new vehicle and created an implementation plan for a reorganization of the CV department
 \end{itemize}
 }  % arguments 3 to 6 can be left empty
 
 \section{Projects}
+\cvitemwithcomment{MotionJump}{Motion-controlled webcam game running in the browser using tracking.js and phaser.io}{JavaScript, Node.js}
+\cvitemwithcomment{TwitterPops}{Map-based real-time view of twitter feeds in direct surroundings with highlighted news trends}{Python/Flask}
 \cvitemwithcomment{WoLifeX}{Developed a platform to enable unique 3rd World Country life experiences}{HTML, CSS, JavaScript}
 \cvitemwithcomment{WEventus}{Webscraping and personalization of events from facebook, eventim, ticketmaster}{Ruby on Rails}
 %\cvitemwithcomment{Schools Out API}{REST API to predict school closures based on weather}{Ruby On Rails}
@@ -137,7 +138,6 @@ Bachelor Thesis: Quantitativ model to select customers in B2B software markets, 
 \cvitemwithcomment{QX-Quarterly Crossing}{Leadership Network (top 2\% out of >5000 applicants)}{2013 - today}
 \cvitemwithcomment{McKinsey \& Company}{Business Technology Office (BTO) Talent Program}{2013 - today}
 \cvitemwithcomment{Boston Consulting Group}{Emeralds Talent Program}{2012 - today}
-\cvitemwithcomment{German Foundation of Integration}{Scholarship}{2012 - 2014}
 
 %\section{Experience}
  %\cventry{2013}{Undergraduate Research}{S.O.F.I.A Android project}{Virginia Tech}{}{}  % arguments 3 to 6 can be left empty
