diff bullets modified

--- a/CSH_modern_resume_general.tex
+++ b/CSH_modern_resume_general.tex
@@ -98,8 +98,8 @@ Bachelor Thesis: Quantitativ model to select customers in B2B software markets, 
 {}
 {
 \begin{itemize}
-\item Founded a startup to sell personalized advertisement signs in bike frames
-\item Achieved quick break-even through acquirement of several paying B2B customers
+\item Founded a five person startup to produce and sell personalized advertisement plates in the frames of bikes
+\item Spearheaded sales and achieved profitability with a discriminative pricing model after acquisition of several paying B2B customers
 \end{itemize}
 }  % arguments 3 to 6 can be left empty
 
